--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </head>
 <body>
     <h1>Sobre a Faculdade Municipal da Palhoça!!</h1>
-    <p>A Faculdade municipal de Palhoça possui os cursos de Analise e Desenvolvimento de Sistemas, Processos Gerenciais, Administração e Pedagogia. Além de programas como o curso de inclusão digital</p>
+    <p>A Faculdade municipal de Palhoça possui os cursos de Analise e Desenvolvimento de Sistemas, Processos Gerenciais, Administração e Pedagogia. Além de programas como o curso de inclusão digital.</p>
     <br/>
     <p1 style="text-align: center;"> O Curso de Analise e Desenvolvimento de Sistema busca formar profissionais preparados para o cenario tecnológico do mercado, desde a criação de sites,
          verificação de qualidade de sistemas, programação e otmização de sistemas.</p1>
